--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/udemy/cd46bb8d-d8c2-423e-a141-527d9914aac8'>Udemy - Sr. Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/udemy/cd46bb8d-d8c2-423e-a141-527d9914aac8'>Udemy - Sr. Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -56,7 +56,7 @@
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1796547'>Job Application for Site Reliability Engineer - Ad Delivery Platform at Reddit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/reddit/jobs/1796547'>Job Application for Site Reliability Engineer - Ad Delivery Platform at Reddit</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -64,7 +64,7 @@
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-grubhub.icims.com/jobs/8592/sr.-cassandra-site-reliability-engineer/job'>Sr. Cassandra Site Reliability Engineer in ... - Careers at Grubhub</a></h5> 
+<h5><a href='https://careers-grubhub.icims.com/jobs/8592/sr.-cassandra-site-reliability-engineer/job'>Sr. Cassandra Site Reliability Engineer in ... - Careers at Grubhub</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... 111 W Washington Suite 2100, Chicago, IL 60602 is now hiring a Sr. Cassandra 
 Site Reliability Engineer in Chicago, Illinois. Review all of the job details and?...</p>
@@ -106,7 +106,7 @@ software platform at the core of the PlayStation Network? Our platform consists 
 <p>3 days ago ... Coya AG has a job opening for Site Reliability Engineer (SRE) / DevOps 
 Engineer (m/w) in Berlin (published: 13.09.2018). Apply now or check the other?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/loon/jobs/4369031002'>Job Application for Site Reliability Engineering Manager at Loon</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/loon/jobs/4369031002'>Job Application for Site Reliability Engineering Manager at Loon</a></h5> 
 <p><span class="badge badge-light">Mountain View</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -127,7 +127,7 @@ preferred); Experience with automating systems and infrastructure via Ansible,?.
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tanda/5a227175-4991-4f59-ad13-ec9f68fe8f79'>Tanda - Senior Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tanda/5a227175-4991-4f59-ad13-ec9f68fe8f79'>Tanda - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -139,7 +139,7 @@ preferred); Experience with automating systems and infrastructure via Ansible,?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://digitalassetsdatainc.recruitee.com/o/infrastructuredevopssite-reliability-engineer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://digitalassetsdatainc.recruitee.com/o/infrastructuredevopssite-reliability-engineer'>
       Infrastructure/DevOps/Site Reliability Engineer - Digital Assets Data, Inc.
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -167,7 +167,7 @@ PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/skytap/46a11f76-e655-44d7-858f-9a638391b464'>Skytap - Site Reliability Engineer - Platform Compute</a></h5> 
+<h5><a href='https://jobs.lever.co/skytap/46a11f76-e655-44d7-858f-9a638391b464'>Skytap - Site Reliability Engineer - Platform Compute</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -195,7 +195,7 @@ PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fireflyon/8fee4307-7fb8-4dac-8bdd-4c6f07d5e1bb'>Firefly - Senior Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/fireflyon/8fee4307-7fb8-4dac-8bdd-4c6f07d5e1bb'>Firefly - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -233,7 +233,7 @@ NodeJS.</p>
 <p><span class="badge badge-light">Charlotte</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365101002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
+<h5><a href='https://boards.greenhouse.io/adhocexternal/jobs/4365101002'>Job Application for Site Reliability Engineer  at Ad Hoc Team</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -254,11 +254,11 @@ NodeJS.</p>
 <p>1 day ago ... Description. We are seeking for a Site Reliability Engineer who will be a part of a 
 team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/quizlet-2/291a57aa-b179-4823-8218-be5280e54f68'>Quizlet - Site Reliability Engineer - Remote</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quizlet-2/291a57aa-b179-4823-8218-be5280e54f68'>Quizlet - Site Reliability Engineer - Remote</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quizlet-2/2b95e966-8076-43c9-bfdc-403613fe6a66'>Quizlet - Site Reliability Engineer - Denver, CO</a></h5> 
+<h5><a href='https://jobs.lever.co/quizlet-2/2b95e966-8076-43c9-bfdc-403613fe6a66'>Quizlet - Site Reliability Engineer - Denver, CO</a></h5> 
 <p><span class="badge badge-light">Denver Denver Denver</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -274,7 +274,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://sherpany.breezy.hr/p/53be054a8aa001-site-reliability-engineer'>Site Reliability Engineer at SHERPANY</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sherpany.breezy.hr/p/53be054a8aa001-site-reliability-engineer'>Site Reliability Engineer at SHERPANY</a></h5> 
 <p><span class="badge badge-light">Lisbon Berlin Paris Milan</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -310,7 +310,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/u7co9irou35u65uajif41t8n3y'>Site Reliability Engineer | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/u7co9irou35u65uajif41t8n3y'>Site Reliability Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -330,7 +330,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quizlet-2/ecc3ad55-5880-45ad-9de2-6b0001339dc0'>Quizlet - Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/quizlet-2/ecc3ad55-5880-45ad-9de2-6b0001339dc0'>Quizlet - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Site Reliability Engineer. San Francisco, CA. Engineering ? SRE. Full-time. Apply 
 for this job. Quizlet's mission is to help students (and their teachers) practice?...</p>
@@ -364,7 +364,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='http://insightengines.applytojob.com/apply/MjehfIgIdM/Site-Reliability-Engineer'>Site Reliability Engineer - Insight Engines - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://insightengines.applytojob.com/apply/MjehfIgIdM/Site-Reliability-Engineer'>Site Reliability Engineer - Insight Engines - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -392,7 +392,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/griddynamics/job/oyGX9fw4'>Grid Dynamics Careers - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/griddynamics/job/oyGX9fw4'>Grid Dynamics Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -442,7 +442,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/boxinc/jobs/1773848'>Job Application for Site Reliability Engineer, IAMS at Box</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/boxinc/jobs/1773848'>Job Application for Site Reliability Engineer, IAMS at Box</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
